Style fixes, website now works on mobile!

--- a/portfolio/src/app/globals.css
+++ b/portfolio/src/app/globals.css
@@ -15,6 +15,9 @@
   padding: 5px;
   margin: 20px 0;
 }
+.spline-container {
+  width: 100%;
+}
 * {
   margin: 0;
   padding: 0;
